# pylinearfold

./: README.md  pyproject.toml
.github/workflows/: pypi.yml
pylinearfold/: _pylinearpartition.cpp
tests/: test_pylinearfold.py
