# This section describes the requirements of the build/installation
# process itself. Being able to do this was the original reason to
# introduce pyproject.toml
[build-system]
requires = [
    "scikit-build-core",
    "pybind11[global]",
]
build-backend = "scikit_build_core.build"

# This section provides general project metadata that is used across
# a variety of build tools. Notably, the version specified here is the
# single source of truth for pylinearfold's version
[project]
name = "pylinearfold"
version = "1.0.0"
description = "Python bindings for LinearFold and LinearPartition"
readme = "README.md"
maintainers = [
    { name = "Luca Monari", email = "l.monari@zmbh.uni-heidelberg.de" },
    { name = "Dominic Kempf", email = "ssc@uni-heidelberg.de" }
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license-files = [
    "COPYING.md",
    "LICENSE.md",
]
dependencies = [
    "numpy"
]

[project.optional-dependencies]
tests = [
    "pytest",
]

# The next section configures building wheels in Continuous Integration
# The cibuildwheel documentation covers the available options in detail:
# https://cibuildwheel.readthedocs.io/en/stable/options/
[tool.cibuildwheel]
# The variables in this section allow you to customize the process how the wheels
# for the Python packages are built. For a list of options, see this
# page: https://cibuildwheel.readthedocs.io/en/stable/options/

# Verbose output is helpful for understanding CI failures
build-verbosity = 3

# We restrict ourselves to 64 bit Python on Windows and omit free-threaded
# builds on Windows - both because of cryptic error messages we received with
# our clang-cl toolchain.
skip = "*-win32 cp3??t-win*"

# Testing commands for our wheels
test-command = "pytest {package}/tests"
test-requires = ["pytest"]
